force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/RS_Customer_Interaction_Per_Case__mdt.object-meta.xml
<CustomObject>
    <label>Customer Interaction Per Case</label>
    <pluralLabel>Customer Interaction Per Case</pluralLabel>
</CustomObject>