force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Dynamic_Field__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Field__c</fullName>
    <label>Dynamic Field</label>
    <type>TextArea</type>
</CustomField>