force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Interaction_Duration__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Duration__c</fullName>
    <label>Interaction Duration</label>
    <type>TextArea</type>
</CustomField>