force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Interaction_From__c.field-meta.xml
<CustomField>
    <fullName>Interaction_From__c</fullName>
    <label>Customer Contact Number(Field 3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>