force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Interaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Name__c</fullName>
    <label>Interaction Name(Field 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>