force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Status__c</fullName>
    <label>Interaction Status(Field 4)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>