force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Interaction_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Time_Field__c</fullName>
    <label>Interaction Time Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>