force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type(Field 5)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>