force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/OrderBy_Field__c.field-meta.xml
<CustomField>
    <fullName>OrderBy_Field__c</fullName>
    <label>OrderBy Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>