force-app/main/default/objects/RS_Customer_Interaction_Per_Case__mdt/fields/Static_Field__c.field-meta.xml
<CustomField>
    <fullName>Static_Field__c</fullName>
    <label>Static Field</label>
    <type>TextArea</type>
</CustomField>